--- a/index.html
+++ b/index.html
@@ -74,21 +74,20 @@
 
                 <div class="s-hero__content-about">
 
-                    <h1>I'm Jonathan Doe.</h1>
+                    <h1>I'm Chaithra.</h1>
 
                     <h3>
-                    I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-                    effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-                    and learn more <a class="smoothscroll" href="#about">about me</a>.
+                    I'm a <span>grad student </span>at <span>Syracuse University</span> studying <span>Data Science</span>. I'm a total programming nerd who's always on the lookout for ways to create software that can make a real difference in people's lives. Learning something new every day is what keeps me going, and I can never get enough of it! Ready to dive in and learn more <a class="smoothscroll" href="#about">about me</a> ? Let's <a class="smoothscroll" href="#about">start scrolling</a>!
                     </h3>
 
                     <div class="s-hero__content-social">
-                        <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a>
-                        <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/chaithra-kc/", target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://github.com/chaithrakc", target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <a href="https://www.youtube.com/channel/UCUhqoUkPFnbTEur7OM0oopQ", target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                        <a href="https://www.kaggle.com/chaithrakc", target="_blank"><i class="fab fa-kaggle" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/ChaithraKc", target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/chaithrakc/", taerget="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com/chaithra.kc.73/"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
