--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
                         <h3>Contact Details</h3>
     
                         <p>
-                        Jonathan Doe <br>
-                        1600 Amphitheatre Parkway <br>
-                        Mountain View, CA 94043 US <br>
-                        <a href="tel:+1975432345">+197 543 2345</a> <br>
-                        <a href="mailto:#0">sayhello@ceevee.com</a>
+                        Chaithra K C <br>
+                        1444 East Genesee Street <br>
+                        Sryacuse, NY 13210 US <br>
+                        <a href="tel:+1975432345">+1315-728-0657</a> <br>
+                        <a href="mailto:#0">ckoppara@syr.edu</a>
                         </p>
                         
                     </div>
                     <div class="column w-1000-stack">
-                        <a href="#0" class="btn btn--download">
+                        <a href="" class="btn btn--download">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:"><path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path><path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path></svg>
                             Download CV
                         </a>
