updating the portfolio

--- a/index.html
+++ b/index.html
@@ -314,37 +314,40 @@
             <div class="column large-9 tab-12">
                 <div class="resume-block">
 
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                    <p style="font-size: medium;">
+                        <b>Key Skills:</b> Machine Learning, Natural Language Processing, Deep Learning, Exploratory Data Analysis (EDA), Data Visualization, Hypothesis Testing, Probability and Statistics, RESTful APIs, Data Pipelines, Database Management, Web Scraping <br>
+                        <b>Programming Languages:</b> Python, R, Java, SQL, PL/SQL, NoSQL </br>
+                        <b>Python Libraries:</b> PySpark, Numpy, Pandas, Matplotlib, Seaborn, Scikit-learn, NLTK, Spacy, Keras, TensorFlow, Gensim, PDFMiner, Selenium, Beautiful Soup <br>
+                        <b>Databases:</b> MySQL, Oracle DB, Mongo DB, AWS S3 <br>
+                        <b>Tools & Utilities:</b> Databricks, Apache Spark, Tableau, Advanced MS Excel, Perforce, Git, Maven <br>
+                        <b>IDEs:</b> Google Colab, Jupyter Notebook, PyCharm, R-Studio, IntelliJ
                     </p>
-
+                    
+                    <h4 class="h4">Expertise in Preferred Technologies</h4>
                     <ul class="skill-bars-fat">
                         <li>
                             <div class="progress percent85"></div>
-                            <strong>HTML</strong>
+                            <strong>Machine Learning</strong>
                         </li>
                         <li>
                             <div class="progress percent85"></div>
-                            <strong>CSS</strong>
+                            <strong>Python Programming</strong>
                         </li>
                         <li>
-                            <div class="progress percent65"></div>
-                            <strong>Javascript</strong>
+                            <div class="progress percent85"></div>
+                            <strong>Databases: SQL (Oracle) & NoSQL (MongoDB)</strong>
                         </li>
                         <li>
-                            <div class="progress percent90"></div>
-                            <strong>Figma</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent75"></div>
-                            <strong>Illustrator</strong>
+                            <div class="progress percent70"></div>
+                            <strong>Natural Language Processing</strong>
                         </li>
                         <li>
                             <div class="progress percent60"></div>
-                            <strong>Photoshop</strong>
+                            <strong>Deep Learning</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent40"></div>
+                            <strong>Inferential Statistics</strong>
                         </li>
                     </ul>
 
@@ -362,7 +365,7 @@
 
         <div class="row s-portfolio__header">
             <div class="column large-12">
-                <h3>A Few Of My Latest Creations</h3>
+                <h3>Recent Data Science Projects - A Selection of My Latest Creations</h3>
             </div>
         </div>
 
