--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                         <p>
                             Chaithra K C <br>
-                            1444 East Genesee Street <br>
+                            1444 East Genesee Street, Apt 2 <br>
                             Sryacuse, NY 13210 US <br>
                             <a href="tel:+1975432345">+1315-728-0657</a> <br>
                             <a href="mailto:#0">ckoppara@syr.edu</a>
@@ -365,7 +365,7 @@
 
         <div class="row s-portfolio__header">
             <div class="column large-12">
-                <h3>Recent Data Science Projects - A Selection of My Latest Creations</h3>
+                <h3>A Selection of My Latest Data Science Projects</h3>
             </div>
         </div>
 
@@ -373,57 +373,29 @@
 
             <div class="column folio-item">
                 <a href="#modal-01" class="folio-item__thumb">
-                    <img src="images/portfolio/droplet.jpg" srcset="images/portfolio/droplet.jpg 1x, 
-                                 images/portfolio/droplet@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/credit_card_default01.jpg" srcset="images/portfolio/credit_card_default01.jpg 1x, 
+                                 images/portfolio/credit_card_default01.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-02" class="folio-item__thumb">
-                    <img src="images/portfolio/lamp.jpg" srcset="images/portfolio/lamp.jpg 1x, 
-                                 images/portfolio/lamp@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/news_summary.jpg" srcset="images/portfolio/news_summary.jpg 1x, 
+                                 images/portfolio/news_summary.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-03" class="folio-item__thumb">
-                    <img src="images/portfolio/minimalismo.jpg" srcset="images/portfolio/minimalismo.jpg 1x, 
-                                 images/portfolio/minimalismo@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/sentiment_analysis.jpg" srcset="images/portfolio/sentiment_analysis.jpg 1x, 
+                                 images/portfolio/sentiment_analysis.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-04" class="folio-item__thumb">
-                    <img src="images/portfolio/shutterbug.jpg" srcset="images/portfolio/shutterbug.jpg 1x, 
-                                 images/portfolio/shutterbug@2x.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="#modal-05" class="folio-item__thumb">
-                    <img src="images/portfolio/fuji.jpg" srcset="images/portfolio/fuji.jpg 1x, 
-                                 images/portfolio/fuji@2x.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="#modal-06" class="folio-item__thumb">
-                    <img src="images/portfolio/skaterboy.jpg" srcset="images/portfolio/skaterboy.jpg 1x, 
-                                 images/portfolio/skaterboy@2x.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="#modal-07" class="folio-item__thumb">
-                    <img src="images/portfolio/rucksack.jpg" srcset="images/portfolio/rucksack.jpg 1x, 
-                                 images/portfolio/rucksack@2x.jpg 2x" alt="">
-                </a>
-            </div> <!-- end folio-item -->
-
-            <div class="column folio-item">
-                <a href="#modal-08" class="folio-item__thumb">
-                    <img src="images/portfolio/sanddunes.jpg" srcset="images/portfolio/sanddunes.jpg 1x, 
-                                 images/portfolio/sanddunes@2x.jpg 2x" alt="">
+                    <img src="images/portfolio/imdb-tmdb01.jpg" srcset="images/portfolio/imdb-tmdb01.jpg 1x, 
+                                 images/portfolio/imdb-tmdb01.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
@@ -434,7 +406,7 @@
         =========================================================== -->
         <div id="modal-01" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-droplet.jpg" alt="" />
+                <img src="images/portfolio/gallery/credit_card_default.jpg" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>Droplet</h5>
@@ -452,7 +424,7 @@
 
         <div id="modal-02" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-lamp.jpg" alt="" />
+                <img src="images/portfolio/gallery/news_summary_-_web_page.jpg" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>The Lamp</h5>
@@ -469,7 +441,7 @@
 
         <div id="modal-03" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-minimalismo.jpg" alt="" />
+                <img src="images/portfolio/gallery/sentiment_analysis.jpg" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>Minimalismo</h5>
@@ -486,7 +458,7 @@
 
         <div id="modal-04" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-shutterbug.jpg" alt="" />
+                <img src="images/portfolio/gallery/imdb-tmdb.png" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>Shutterbug</h5>
@@ -501,267 +473,7 @@
             </div>
         </div> <!-- end modal -->
 
-        <div id="modal-05" hidden>
-            <div class="modal-popup">
-
-                <img src="images/portfolio/gallery/g-fuji.jpg" alt="" />
-
-                <div class="modal-popup__desc">
-                    <h5>Fuji</h5>
-                    <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                        nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                    <ul class="modal-popup__cat">
-                        <li>Product Design</li>
-                    </ul>
-                </div>
-
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
-            </div>
-        </div> <!-- end modal -->
-
-        <div id="modal-06" hidden>
-            <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-skaterboy.jpg" alt="" />
-
-                <div class="modal-popup__desc">
-                    <h5>Skaterboy</h5>
-                    <p>Quisquam vel libero consequuntur autem voluptas. Qui aut vero. Omnis fugit mollitia cupiditate
-                        voluptas. Aenean sollicitudin, lorem quis bibendum auctor.</p>
-                    <ul class="modal-popup__cat">
-                        <li>Branding</li>
-                        <li>Product Design</li>
-                    </ul>
-                </div>
-
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
-            </div>
-        </div> <!-- end modal -->
-
-        <div id="modal-07" hidden>
-            <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-rucksack.jpg" alt="" />
-
-                <div class="modal-popup__desc">
-                    <h5>Rucksack</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui
-                        assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
-                    <ul class="modal-popup__cat">
-                        <li>Branding</li>
-                        <li>Product Design</li>
-                    </ul>
-                </div>
-
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
-            </div>
-        </div> <!-- end modal -->
-
-        <div id="modal-08" hidden>
-            <div class="modal-popup">
-                <img src="images/portfolio/gallery/g-sanddunes.jpg" alt="" />
-
-                <div class="modal-popup__desc">
-                    <h5>Sand Dunes</h5>
-                    <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                        nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                    <ul class="modal-popup__cat">
-                        <li>Web Design</li>
-                    </ul>
-                </div>
-
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
-            </div>
-        </div> <!-- end modal -->
-
-
     </section> <!-- end s-portfolio -->
-
-
-    <!-- CTA
-    ================================================== -->
-    <section class="s-cta">
-
-        <div class="row">
-            <div class="column">
-                <h3 class="h2 section-desc">
-                    Need a great reliable web hosting?
-                </h3>
-            </div>
-        </div> <!-- end heading-block -->
-
-        <div class="row cta-content">
-            <div class="column">
-                <p>
-                    We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                    Powerful web and Wordpress hosting. Guaranteed.
-                    Starting at $2.95 per month.
-                </p>
-
-                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn btn--primary h-full-width">Get Started</a>
-            </div>
-        </div> <!-- end cta-content -->
-
-    </section> <!-- end s-cta -->
-
-
-    <!-- testimonials
-    ================================================== -->
-    <section id="testimonials" class="s-testimonials target-section">
-
-        <div class="s-testimonials__bg"></div>
-
-        <div class="row s-testimonials__header">
-            <div class="column large-12">
-                <h3>Hear What My Clients Says</h3>
-            </div>
-        </div>
-
-        <div class="row s-testimonials__content">
-
-            <div class="column">
-
-                <div class="swiper-container testimonial-slider">
-
-                    <div class="swiper-wrapper">
-
-                        <div class="testimonial-slider__slide swiper-slide">
-                            <div class="testimonial-slider__author">
-                                <img src="images/avatars/user-02.jpg" alt="Author image"
-                                    class="testimonial-slider__avatar">
-                                <cite class="testimonial-slider__cite">
-                                    <strong>Tim Cook</strong>
-                                    <span>CEO, Apple</span>
-                                </cite>
-                            </div>
-                            <p>
-                                Molestiae incidunt consequatur quis ipsa autem nam sit enim magni. Voluptas tempore rem.
-                                Explicabo a quaerat sint autem dolore ducimus ut consequatur neque. Nisi dolores quaerat
-                                fuga rem nihil nostrum.
-                                Laudantium quia consequatur molestias delectus culpa.
-                            </p>
-                        </div> <!-- end testimonial-slider__slide -->
-
-                        <div class="testimonial-slider__slide swiper-slide">
-                            <div class="testimonial-slider__author">
-                                <img src="images/avatars/user-03.jpg" alt="Author image"
-                                    class="testimonial-slider__avatar">
-                                <cite class="testimonial-slider__cite">
-                                    <strong>Sundar Pichai</strong>
-                                    <span>CEO, Google</span>
-                                </cite>
-                            </div>
-                            <p>
-                                Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat
-                                voluptas animi adipisci.
-                                Nisi eaque consequatur. Voluptatem dignissimos ut ducimus accusantium perspiciatis.
-                                Quasi voluptas eius distinctio. Atque eos maxime.
-                            </p>
-                        </div> <!-- end testimonial-slider__slide -->
-
-                        <div class="testimonial-slider__slide swiper-slide">
-                            <div class="testimonial-slider__author">
-                                <img src="images/avatars/user-04.jpg" alt="Author image"
-                                    class="testimonial-slider__avatar">
-                                <cite class="testimonial-slider__cite">
-                                    <strong>Satya Nadella</strong>
-                                    <span>CEO, Microsoft</span>
-                                </cite>
-                            </div>
-                            <p>
-                                Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia
-                                nesciunt. Ducimus aut sed ipsam.
-                                Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius
-                                distinctio.
-                                Voluptatem dignissimos ut.
-                            </p>
-                        </div> <!-- end testimonial-slider__slide -->
-
-                        <div class="testimonial-slider__slide swiper-slide">
-                            <div class="testimonial-slider__author">
-                                <img src="images/avatars/user-05.jpg" alt="Author image"
-                                    class="testimonial-slider__avatar">
-                                <cite class="testimonial-slider__cite">
-                                    <strong>Jeff Bezos</strong>
-                                    <span>CEO, Amazon</span>
-                                </cite>
-                            </div>
-                            <p>
-                                Nunc interdum lacus sit amet orci. Vestibulum dapibus nunc ac augue. Fusce vel dui. In
-                                ac felis
-                                quis tortor malesuada pretium. Curabitur vestibulum aliquam leo. Qui sed at corrupti
-                                expedita voluptas odit.
-                                Nihil ea quia nesciunt. Ducimus aut sed ipsam.
-                            </p>
-                        </div> <!-- end testimonial-slider__slide -->
-
-                    </div> <!-- end testimonial slider swiper-wrapper -->
-
-                    <div class="swiper-pagination"></div>
-
-                </div> <!-- end swiper-container -->
-
-            </div> <!-- end column -->
-
-        </div> <!-- end row -->
-
-    </section> <!-- end s-testimonials -->
-
-
-    <!-- contact
-    ================================================== -->
-    <section id="contact" class="s-contact target-section">
-
-        <div class="row s-contact__header">
-            <div class="column large-12">
-                <h3 class="section-header-allcaps">Say Hello</h3>
-            </div>
-        </div>
-
-        <div class="row s-contact__content">
-
-            <div class="column large-7 medium-12">
-
-                <h4 class="huge-text">
-                    Have a new project in mind? Let's collaborate and build something awesome.
-                    Let's turn that idea to an even greater product :)
-                </h4>
-
-            </div>
-
-            <div class="column large-4 medium-12">
-
-                <div class="row contact-infos">
-                    <div class="column large-12 medium-6 tab-12">
-                        <div class="contact-block">
-                            <h5 class="contact-block__header">
-                                Email
-                            </h5>
-                            <p class="contact-block__content">
-                                <a class="mailtoui" href="mailto:sayhello@ceevee.com">sayhello@ceevee.com</a>
-                            </p>
-                        </div> <!-- end contact-block -->
-                    </div>
-                    <div class="column large-12 medium-6 tab-12">
-                        <div class="contact-block">
-                            <h5 class="contact-block__header">
-                                Phone
-                            </h5>
-                            <p class="contact-block__content">
-                                <a href="tel:+1975432345">+197 543 2345</a>
-                            </p>
-                        </div> <!-- end contact-block -->
-                    </div>
-
-                    <div class="column large-12">
-                        <a href="mailto:sayhello@ceevee.com" class="mailtoui btn btn--primary h-full-width">Let's
-                            Talk</a>
-                    </div>
-                </div> <!-- end contact-infos -->
-
-            </div>
-        </div> <!-- s-contact__content -->
-
-    </section> <!-- end s-contact -->
-
 
     <!-- footer
     ================================================== -->
@@ -769,18 +481,16 @@
         <div class="row">
             <div class="column large-4 medium-6 w-1000-stack s-footer__social-block">
                 <ul class="s-footer__social">
-                    <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/chaithra-kc/", target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/chaithrakc"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCUhqoUkPFnbTEur7OM0oopQ"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.kaggle.com/chaithrakc"><i class="fab fa-kaggle" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/ChaithraKc"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/chaithrakc/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/chaithra.kc.73/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
-            <div class="column large-7 medium-6 w-1000-stack ss-copyright">
-                <span>© Copyright Ceevee 2021</span>
-                <span>Design by <a href="https://www.styleshout.com/">StyleShout</a></span>
-            </div>
         </div>
 
         <div class="ss-go-top">
