--- a/index.html
+++ b/index.html
@@ -368,33 +368,32 @@
             </div>
         </div>
 
-        <div class="row collapse block-large-1-4 block-medium-1-3 block-tab-1-2 block-500-stack folio-list">
+        <div class="row collapse block-large-1-3 block-medium-1-3 block-tab-1-2 block-500-stack folio-list">
 
             <div class="column folio-item">
                 <a href="#modal-01" class="folio-item__thumb">
-                    <img src="images/portfolio/credit_card_default01.jpg" srcset="images/portfolio/credit_card_default01.jpg 1x, 
-                                 images/portfolio/credit_card_default01.jpg 2x" alt="">
+                    <img src="images/portfolio/credit_card_default_new.jpg" srcset="images/portfolio/credit_card_default_new.jpg 1x, 
+                                 images/portfolio/credit_card_default_new.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-02" class="folio-item__thumb">
-                    <img src="images/portfolio/news_summary.jpg" srcset="images/portfolio/news_summary.jpg 1x, 
-                                 images/portfolio/news_summary.jpg 2x" alt="">
+                    <img src="images/portfolio/news_summary_new.jpg" srcset="images/portfolio/news_summary_new.jpg 1x, 
+                                 images/portfolio/news_summary_new.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
             <div class="column folio-item">
                 <a href="#modal-03" class="folio-item__thumb">
-                    <img src="images/portfolio/sentiment_analysis.jpg" srcset="images/portfolio/sentiment_analysis.jpg 1x, 
-                                 images/portfolio/sentiment_analysis.jpg 2x" alt="">
+                    <img src="images/portfolio/sentiment_analysis_new.jpg" srcset="images/portfolio/sentiment_analysis_new.jpg 1x, 
+                                 images/portfolio/sentiment_analysis_new.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
-
             <div class="column folio-item">
                 <a href="#modal-04" class="folio-item__thumb">
-                    <img src="images/portfolio/imdb-tmdb01.jpg" srcset="images/portfolio/imdb-tmdb01.jpg 1x, 
-                                 images/portfolio/imdb-tmdb01.jpg 2x" alt="">
+                    <img src="images/portfolio/imdb_new.jpg" srcset="images/portfolio/imdb_new.jpg 1x, 
+                                 images/portfolio/imdb_new.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
@@ -457,7 +456,7 @@
 
         <div id="modal-04" hidden>
             <div class="modal-popup">
-                <img src="images/portfolio/gallery/imdb-tmdb.png" alt="" />
+                <img src="images/portfolio/gallery/imdb01.jpg" alt="" />
 
                 <div class="modal-popup__desc">
                     <h5>Shutterbug</h5>
