--- a/index.html
+++ b/index.html
@@ -274,10 +274,9 @@
                     </div>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        <b>Coursework:</b> Introduction to Data Science, Applied Machine Learning, Big Data Analytics, Applied Deep Learning, Natural Language Processing, Inferential Statistics, Data Analysis & Decision-Making, Scripting for Data Analysis, Advanced Bigdata Management.<br>
+                        <b>GPA: 4.0/4.0</b>
+                        
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -295,10 +294,8 @@
                     </div>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        <b>Relevant coursework:</b> Principles of Programming Languages, Java & J2EE, Data Structures, Algorithms, Database Management Systems, Data Mining, Business Intelligence, Design Patterns, Unix System Programming, and Linux Internals.<br>
+                        <b>GPA: 9.56/10.0</b>
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -407,16 +404,17 @@
                 <img src="images/portfolio/gallery/credit_card_default.jpg" alt="" />
 
                 <div class="modal-popup__desc">
-                    <h5>Droplet</h5>
-                    <p>Odio soluta enim quos sit asperiores rerum rerum repudiandae cum. Vel voluptatem alias qui
-                        assumenda iure et expedita voluptatem. Ratione officiis quae.</p>
+                    <h5>CreditCard Default Prediction</h5>
+
+                    <p>The project used three machine learning models to analyze credit card default risk, without relying on credit scores or credit history to predict whether customer will default.</p>
+
                     <ul class="modal-popup__cat">
-                        <li>Branding</li>
-                        <li>Product Design</li>
+                        <li>Apache Spark</li>
+                        <li>Big Data</li>
                     </ul>
                 </div>
 
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                <a href="https://github.com/chaithrakc/credit_card_default_prediction" class="modal-popup__details" target="_blank">Project link</a>
             </div>
         </div> <!-- end modal -->
 
@@ -425,15 +423,17 @@
                 <img src="images/portfolio/gallery/news_summary_-_web_page.jpg" alt="" />
 
                 <div class="modal-popup__desc">
-                    <h5>The Lamp</h5>
-                    <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
-                        nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                    <h5>News Summarization</h5>
+                    <p>The project's goal is to use different Deep Learning techniques - T5 Transformer, Encoder & Decoder with BiLSTM models, and NLP to generate coherent summaries – to generate brief descriptions of news stories.</p>
                     <ul class="modal-popup__cat">
-                        <li>Branding</li>
+                        <li>Encoder Decoder Architecture</li>
+                        <li>Bi-direcitonal LSTM</li>
+                        <li>T5 Transformer</li>
+                        <li>TensorFlow</li>
                     </ul>
                 </div>
 
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                <a href="https://github.com/chaithrakc/News-Summarization" target='_blank' class="modal-popup__details">Project link</a>
             </div>
         </div> <!-- end modal -->
 
@@ -442,15 +442,14 @@
                 <img src="images/portfolio/gallery/sentiment_analysis.jpg" alt="" />
 
                 <div class="modal-popup__desc">
-                    <h5>Minimalismo</h5>
-                    <p>Exercitationem reprehenderit quod explicabo consequatur aliquid ut magni ut. Deleniti quo
-                        corrupti illum velit eveniet ratione necessitatibus ipsam mollitia.</p>
+                    <h5>Sentiment Analysis of COVID News Stories</h5>
+                    <p>The project aims to analyze the sentiment polarity of news articles related to COVID-19 from various countries, specifically the UK, India, Japan, and South Korea. The sentiment polarity of news article was predicted using Naïve Bayes classifier and BiLSTM models.</p>
                     <ul class="modal-popup__cat">
                         <li>Product Design</li>
                     </ul>
                 </div>
 
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                <a href="https://github.com/chaithrakc/sentiment-analysis-covid-news-articles" class="modal-popup__details" target="_blank">Project link</a>
             </div>
         </div> <!-- end modal -->
 
@@ -459,15 +458,15 @@
                 <img src="images/portfolio/gallery/imdb01.jpg" alt="" />
 
                 <div class="modal-popup__desc">
-                    <h5>Shutterbug</h5>
-                    <p>Dolores velit qui quos nobis. Aliquam delectus voluptas quos possimus non voluptatem voluptas
-                        voluptas. Est doloribus eligendi porro doloribus voluptatum.</p>
+                    <h5>Entity Resolution between IMDb and TMDB</h5>
+                    <p>The goal of the project was to find a solution to the task of record linkage, which involves identifying records in a data set that refer to the same entity across different data sources.</p>
                     <ul class="modal-popup__cat">
-                        <li>E-Commerce</li>
+                        <li>Record Linkage</li>
+                        <li>K-Nearest Neighbor</li>
+                        <li>TF-IDF</li>
                     </ul>
                 </div>
 
-                <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
             </div>
         </div> <!-- end modal -->
 
