--- a/index.html
+++ b/index.html
@@ -134,19 +134,7 @@
             </div>
             <div class="column large-9 tab-12 s-about__content">
                 <h3>About Me</h3>
-                <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                    accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                    quae ab illo inventore veritatis et quasi architecto beatae vitae
-                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                    aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-                    eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-                    sed quia non numquam eius modi tempora incidunt ut labore et dolore
-                    magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-                    nostrum exercitationem ullam corporis suscipit laboriosam.
-                </p>
-
+                <p>As a dedicated data science graduate student at Syracuse University, I have developed a deep understanding of real-time applications of data science, including deep learning, NLP, and machine learning algorithms. With my experience as a senior software engineer in a fintech R&D team, I have honed my skills in working collaboratively with teams and adapting to fast-paced work environments. I am excited to work alongside a team of experts in the field who share my passion for AI and its real-world applications. I believe that my strong academic background, experience in software engineering, and passion for AI make me an excellent data scientist. </p>
                 <hr>
 
                 <div class="row s-about__content-bottom">
@@ -202,10 +190,11 @@
                     </div>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        • Created automated workflow using Databricks and Apache Spark to feed historical data into an XGBoost ML model, resulting in improved accuracy of future audience prediction. <br>
+                        • Designed and implemented a Python module for entity resolution using NLP pre-processing techniques, TF-IDF word vectorization, and K-Nearest Neighbor ML model, resulting in more accurate matching of Viacom's program inventory with Gracenote data, and IMDb with TMDB. <br>
+                        • Built a data pipeline to ingest 700 million metadata records from IMDb website into AWS S3 bucket, which underwent various data transformations and validations before being loaded into Databricks Delta Tables. <br>
+                        • Generated forecast report by aggregating data from several Delta tables using SQL and PySpark, allowing for comparison of predictions made by various models using MAPE and RMSE error metrics. <br>
+                        • Converted SQL-based ETL pipelines source code to PySpark, enabling automation and improving efficiency of data-processing
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -223,10 +212,11 @@
                     </div>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        •	Developed multi-threaded data quality tool to validate the holding and transaction data, and to extrapolate missing financial details based on patterns observed in other users. <br>
+                        •	Conducted a proof of concept to determine the most appropriate database for the project, including OLTP (Oracle DB), Mongo DB, and Apache Kudu, based on query performance. <br>
+                        •	Designed Mongo DB collections and documents, and optimized indexing for efficient application querying. <br>
+                        •	Implemented Netflix-Ribbon load balancer to achieve fault tolerance and distribution of application traffic. <br>
+                        •	Designed and implemented RESTful API using to enable easy integration of reconciliation analysis with other systems
                     </p>
 
                 </div> <!-- end resume-block -->
@@ -244,10 +234,11 @@
                     </div>
 
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore
-                        vero quidem nobis maxime dolorem aliquam quisquam eum ipsum amet. Vitae
-                        aut atque fuga dolorem. Vel voluptatibus fugiat nam. Impedit aperiam
-                        nesciunt facilis! Porro architecto dicta inventore tempora ratione quia odio.
+                        •	Developed web scraping tools with Python Selenium APIs to aggregate financial and personal data from banking sites. <br>
+                        •	Designed a PDF parser for extracting bank statement data using Python’s PDFMiner (text extraction tool). <br>
+                        •	Implemented regex validator with Java regular expressions for validating Personally Identifiable Information (PII). <br>
+                        •	Performed code reviews, involved in the design discussions and mentored new joiners . <br>
+
                     </p>
 
                 </div> <!-- end resume-block -->
