--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
             </div> <!-- end folio-item -->
             <div class="column folio-item">
                 <a href="#modal-04" class="folio-item__thumb">
-                    <img src="images/portfolio/imdb_new.jpg" srcset="images/portfolio/imdb_new.jpg 1x, 
-                                 images/portfolio/imdb_new.jpg 2x" alt="">
+                    <img src="images/portfolio/imdb_enlarged.jpg" srcset="images/portfolio/imdb_enlarged.jpg 1x, 
+                                 images/portfolio/imdb_enlarged.jpg 2x" alt="">
                 </a>
             </div> <!-- end folio-item -->
 
@@ -436,7 +436,10 @@
                     <h5>Sentiment Analysis of COVID News Stories</h5>
                     <p>The project aims to analyze the sentiment polarity of news articles related to COVID-19 from various countries, specifically the UK, India, Japan, and South Korea. The sentiment polarity of news article was predicted using Naïve Bayes classifier and BiLSTM models.</p>
                     <ul class="modal-popup__cat">
-                        <li>Product Design</li>
+                        <li>Natural Language Processing</li>
+                        <li>Word Vectorization</li>
+                        <li>Naive Bayes Algorithm</li>
+                        <li>BiLSTM</li>
                     </ul>
                 </div>
 
