--- a/index.html
+++ b/index.html
@@ -317,6 +317,14 @@
                             <strong>Machine Learning</strong>
                         </li>
                         <li>
+                            <div class="progress percent70"></div>
+                            <strong>Natural Language Processing</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent70"></div>
+                            <strong>Deep Learning</strong>
+                        </li>
+                        <li>
                             <div class="progress percent85"></div>
                             <strong>Python Programming</strong>
                         </li>
@@ -324,16 +332,9 @@
                             <div class="progress percent85"></div>
                             <strong>Databases: SQL (Oracle) & NoSQL (MongoDB)</strong>
                         </li>
+                        
                         <li>
-                            <div class="progress percent70"></div>
-                            <strong>Natural Language Processing</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent60"></div>
-                            <strong>Deep Learning</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent40"></div>
+                            <div class="progress percen40"></div>
                             <strong>Inferential Statistics</strong>
                         </li>
                     </ul>
