--- a/index.html
+++ b/index.html
@@ -330,7 +330,11 @@
                         </li>
                         <li>
                             <div class="progress percent85"></div>
-                            <strong>Databases: SQL (Oracle) & NoSQL (MongoDB)</strong>
+                            <strong>NoSQL (MongoDB)</strong>
+                        </li>
+                        <li>
+                            <div class="progress percent70"></div>
+                            <strong>SQL (Oracle)</strong>
                         </li>
                         <li>
                             <div class="progress percen40"></div>
