--- a/index.html
+++ b/index.html
@@ -96,10 +96,6 @@
                                 aria-hidden="true"></i></a>
                         <a href="https://twitter.com/ChaithraKc" , target="_blank"><i class="fab fa-twitter"
                                 aria-hidden="true"></i></a>
-                        <a href="https://www.instagram.com/chaithrakc/" , taerget="_blank"><i class="fab fa-instagram"
-                                aria-hidden="true"></i></a>
-                        <a href="https://www.facebook.com/chaithra.kc.73/"><i class="fab fa-facebook-square"
-                                aria-hidden="true"></i></a>
                     </div>
 
                 </div> <!-- end s-hero__content-about -->
@@ -136,31 +132,16 @@
                 <h3>About Me</h3>
                 <p>As a dedicated data science graduate student at Syracuse University, I have developed a deep understanding of real-time applications of data science, including deep learning, NLP, and machine learning algorithms. With my experience as a senior software engineer in a fintech R&D team, I have honed my skills in working collaboratively with teams and adapting to fast-paced work environments. I am excited to work alongside a team of experts in the field who share my passion for AI and its real-world applications. I believe that my strong academic background, experience in software engineering, and passion for AI make me an excellent data scientist. </p>
                 <hr>
-
-                <div class="row s-about__content-bottom">
-                    <div class="column w-1000-stack">
-                        <h3>Contact Details</h3>
-
-                        <p>
-                            Chaithra K C <br>
-                            1444 East Genesee Street, Apt 2 <br>
-                            Sryacuse, NY 13210 US <br>
-                            <a href="tel:+1975432345">+1315-728-0657</a> <br>
-                            <a href="mailto:#0">ckoppara@syr.edu</a>
-                        </p>
-
-                    </div>
-                    <div class="column w-1000-stack">
-                        <a href="https://github.com/chaithrakc/chaithrakc.github.io/raw/main/resume/chaithra_resume_v21.pdf"
-                            class="btn btn--download">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
-                                <path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path>
-                                <path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path>
-                            </svg>
-                            Download CV
-                        </a>
-                    </div>
+                <div class="column w-1000-stack">
+                    <a href="https://github.com/chaithrakc/chaithrakc.github.io/raw/main/resume/chaithra_resume_v21.pdf"
+                        class="btn btn--download">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
+                            <path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path>
+                            <path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path>
+                        </svg>
+                        Download CV
+                    </a>
                 </div>
             </div>
         </div> <!-- end row -->
@@ -500,22 +481,12 @@
                             <h5 class="contact-block__header">
                                 Email
                             </h5>
-                            <p class="contact-block__content">
-                                <a class="mailtoui" href="mailto:sayhello@ceevee.com">ckoppara@syr.edu</a>
+                            <p class="contact-block__content" >
+                                <a class="mailtoui" href="mailto:ckoppara@syr.edu">ckoppara@syr.edu</a>
                             </p>
                         </div> <!-- end contact-block -->
                     </div>
-                    <div class="column large-12 medium-6 tab-12">
-                        <div class="contact-block">
-                            <h5 class="contact-block__header">
-                                Phone
-                            </h5>
-                            <p class="contact-block__content">
-                                <a href="tel:+1975432345">+1315-728-0657</a>
-                            </p>
-                        </div> <!-- end contact-block -->
-                    </div>
-
+                   
                     <div class="column large-12">
                         <a href="mailto:ckoppara@syr.edu" class="mailtoui btn btn--primary h-full-width">Let's Talk</a>
                     </div>
@@ -537,8 +508,6 @@
                     <li><a href="https://www.youtube.com/channel/UCUhqoUkPFnbTEur7OM0oopQ"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.kaggle.com/chaithrakc"><i class="fab fa-kaggle" aria-hidden="true"></i></a></li>
                     <li><a href="https://twitter.com/ChaithraKc"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.instagram.com/chaithrakc/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="https://www.facebook.com/chaithra.kc.73/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
