adjusting button on about page

--- a/index.html
+++ b/index.html
@@ -132,16 +132,18 @@
                 <h3>About Me</h3>
                 <p>As a dedicated data science graduate student at Syracuse University, I have developed a deep understanding of real-time applications of data science, including deep learning, NLP, and machine learning algorithms. With my experience as a senior software engineer in a fintech R&D team, I have honed my skills in working collaboratively with teams and adapting to fast-paced work environments. I am excited to work alongside a team of experts in the field who share my passion for AI and its real-world applications. I believe that my strong academic background, experience in software engineering, and passion for AI make me an excellent data scientist. </p>
                 <hr>
-                <div class="column w-1000-stack">
-                    <a href="https://github.com/chaithrakc/chaithrakc.github.io/raw/main/resume/chaithra_resume_v21.pdf"
-                        class="btn btn--download">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                            style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
-                            <path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path>
-                            <path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path>
-                        </svg>
-                        Download CV
-                    </a>
+                <div class="row s-about__content-bottom">
+                    <div class="column w-1000-stack">
+                        <a href="https://github.com/chaithrakc/chaithrakc.github.io/raw/main/resume/chaithra_resume_v21.pdf"
+                            class="btn btn--download">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
+                                <path d="M12 16L16 11 13 11 13 4 11 4 11 11 8 11z"></path>
+                                <path d="M20,18H4v-7H2v7c0,1.103,0.897,2,2,2h16c1.103,0,2-0.897,2-2v-7h-2V18z"></path>
+                            </svg>
+                            Download CV
+                        </a>
+                    </div>
                 </div>
             </div>
         </div> <!-- end row -->
